[FIX] - contact form icons alignment fixed. Different position for the icons is needed in the contact form on the front page, within the contact section. On pages where the contact form is displayed from the shortcode or in the widgets areas icons are fine.

--- a/assets/sass/0_base/_mixins.scss
+++ b/assets/sass/0_base/_mixins.scss
@@ -62,8 +62,8 @@
   font-family: "FontAwesome";
   font-size: 16px;
   position: absolute;
-  top: 17px;
-  left: 10px;
+  top: 6px;
+  left: 11px;
 }
 
 /* Dark overlay for sections with background image option */
