--- a/assets/sass/2_elements/_pirate_forms.scss
+++ b/assets/sass/2_elements/_pirate_forms.scss
@@ -64,11 +64,11 @@
   } /* End of textarea */
 }
 
-.widget .pirate_forms_wrap {
+.hestia-contact .pirate_forms_wrap {
   .contact_name_wrap .form-group::before,
   .contact_email_wrap .form-group::before,
   .contact_subject_wrap .form-group::before {
-    top: 6px;
-    left: 11px;
+    top: 17px;
+    left: 10px;
   }
 }
